feat: first pass at throttling
lets goooo
